--- a/config.json
+++ b/config.json
@@ -8,7 +8,9 @@
     "jd_redrain": 1,
     "jd_joyjd_open": [13],
     "jd_wxgame": [23],
-    "jd_fruit":[6, 12 ,18],
+    "jd_fruit_task":[6, 12, 18],
+    "jd_fruit_help":[7, 13, 19],
+    "jd_fruit_friend":[8, 20],
     "jx_sign": [8, 13],
     "jd_car": [1, 5],
     "jd_bean_sign": [1],
